--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
     body {
       margin: 0;
       padding: 0;
-      background-image: url('background.jpg'); /* Replace with your background */
-      background-size: cover;
-      background-position: center;
+      background-color: #fde4e4; /* <-- Set pink background */
       font-family: 'Dancing Script', cursive;
       color: white;
       text-align: center;
     }
+
 
     .container {
       background-color: rgba(0, 0, 0, 0.6);
@@ -38,10 +37,10 @@
     }
 
     .btn {
-      margin-top: 30px;
-      padding: 15px 30px;
+      margin-top: 60px; /* Matched the top margin */
+      padding: 14px 28px; /* Matched the padding */
       font-size: 1.4em;
-      color: pink;
+      color: white; /* Matched the text color */
       background-color: #ff69b4;
       border: none;
       border-radius: 10px;
@@ -49,6 +48,7 @@
       transition: background-color 0.3s ease;
       text-decoration: none;
       display: inline-block;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Added the box shadow */
     }
 
     .btn:hover {
@@ -63,14 +63,14 @@
 </head>
 <body>
   <div class="container">
-    <h1>To The Love of My Life 💖</h1>
+    <h1>To The Love of My Life ♥️ </h1>
     <p>
-      So May 10th, it's finally here. The most amazing person in the world is celebrating
+      So May 10th is finally here, and the most amazing person in the world is celebrating
       one more year. It's no surprise I was gonna write you something, and I think even
-      me doing it this way is no surprise, since I sent u one of these some time ago. Back there
-      I was just testing for your birthday (yeah, sometimes I think in advance 😄)
+      me doing it this way is no surprise, since I sent you one of these some time ago. Back there
+      I was just testing it for your birthday (yeah, sometimes I think in advance 😄)
       <br><br>
-      So allow me to take u on a short journey, a journey through my heart, where I will try
+      So allow me to take you on a short journey, a journey through my heart, where I will try
       to show you how much you mean to me.
     </p>
     <a href="page2.html" class="btn">Let's go</a>
