--- a/page4.html
+++ b/page4.html
@@ -64,10 +64,10 @@
 
   <h1>Happy Birthday, My Love 🎉</h1>
   <p>
-    Today, your day, I just want to show how lucky I am to have you. <br>
+    Today is your day, and I just want to show how lucky I am to have you. <br>
     You're the most amazing part of my life, and today is all about celebrating you. <br>
-    I hope this little surprise can show u how much I love you, and I was thinking, how can I end this composed message? <br>
-    Well, I feel like the best way is with a love letter, to the love of my life!
+    I hope this little surprise can show you how much I love you. I was thinking, how can I end this composed message? <br>
+    Well, I feel like the best way is with a love letter, a love letter to the love of my life!
   </p>
 
   <div class="cake">🎂</div>
