--- a/page_final.html
+++ b/page_final.html
@@ -4,7 +4,15 @@
   <meta charset="UTF-8">
   <title>A Letter for You</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap');
+    /*@import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap');*/
+    /*@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');*/
+    /*@import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');*/
+    @import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');
+    /*@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');*/
+    @import url('https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Reenie+Beanie&family=Just+Another+Hand&family=Gloria+Hallelujah&display=swap');
+
+
 
     body {
       margin: 0;
@@ -12,11 +20,11 @@
       background-image: url('paper-texture.jpg');
       background-size: cover;
       background-position: center;
-      font-family: 'Homemade Apple', cursive;
+      font-family: 'Gloria Hallelujah', cursive;
       color: #4B2E2E;
       padding: 60px 20px;
       line-height: 2.2em;
-      font-size: 1.2em;
+      font-size: 1.3em;
       max-width: 800px;
       margin: auto;
       text-align: justify;
@@ -62,8 +70,8 @@
   </p>
 
   <div class="signature">
-    Your love, João<br>
-    💖
+    Your love, João ♥️<br>
+    
   </div>
 </body>
 </html>
